tests/tests/c_reference_project/reference_project.h

typedef struct basicservice basicservice;
/// Some struct we want to expose as a class.
typedef struct servicecallbacks servicecallbacks;
typedef struct serviceignoringmethods serviceignoringmethods;
/// Some struct we want to expose as a class.
typedef struct servicemultiplectors servicemultiplectors;
/// Some struct we want to expose as a class.
typedef struct serviceonpanic serviceonpanic;
/// Services can use lifetimes. However, they are more dangerous to use
/// via FFI, since you will not get any help tracking lifetimes there.
typedef struct serviceusinglifetimes serviceusinglifetimes;
/// Some struct we want to expose as a class.
typedef struct servicevariousslices servicevariousslices;
typedef enum ffierror
    {
    FFIERROR_OK = 0,
    FFIERROR_NULL = 100,
    FFIERROR_PANIC = 200,
    FFIERROR_DELEGATE = 300,
    FFIERROR_FAIL = 400,
    } ffierror;
typedef struct inner
    {
    float x;
    } inner;
typedef struct local
    {
    uint32_t x;
    } local;
typedef struct vec3f32
    {
    float x;
    float y;
    float z;
    } vec3f32;
typedef uint8_t (*fptr_fn_u8_rval_u8)(uint8_t x0);
typedef uint32_t (*mycallback)(uint32_t value);
typedef uint32_t (*mycallbacknamespaced)(uint32_t value);
typedef void (*sumdelegate1)();
typedef int32_t (*sumdelegate2)(int32_t x, int32_t y);
typedef ffierror (*sumdelegatereturn)(int32_t x, int32_t y);
typedef void (*sumdelegatereturn2)(int32_t x, int32_t y);
typedef struct container
    {
    local foreign;
    } container;
///A pointer to an array of data someone else owns which may not be modified.
typedef struct slicebool
    {
    ///Pointer to start of immutable data.
    const uint8_t* data;
    ///Number of elements.
    uint64_t len;
    } slicebool;
///A pointer to an array of data someone else owns which may not be modified.
typedef struct slicei32
    {
    ///Pointer to start of immutable data.
    const int32_t* data;
    ///Number of elements.
    uint64_t len;
    } slicei32;
///A pointer to an array of data someone else owns which may not be modified.
typedef struct sliceu8
    {
    ///Pointer to start of immutable data.
    const uint8_t* data;
    ///Number of elements.
    uint64_t len;
    } sliceu8;
///Option type containing boolean flag and maybe valid data.
typedef struct optioninner
    {
    ///Element that is maybe valid.
    inner t;
    ///Byte where `1` means element `t` is valid.
    uint8_t is_some;
    } optioninner;
typedef void (*mycallbackvoid)(const void* ptr);
typedef struct delegatecallbackmycallbackcontextual
    {
    mycallbackcontextual callback;
    const void* context;
    } delegatecallbackmycallbackcontextual;
typedef struct delegatetable
    {
    mycallback my_callback;
    mycallbacknamespaced my_callback_namespaced;
    mycallbackvoid my_callback_void;
    mycallbackcontextual my_callback_contextual;
    sumdelegate1 sum_delegate_1;
    sumdelegate2 sum_delegate_2;
    sumdelegatereturn sum_delegate_return;
    sumdelegatereturn2 sum_delegate_return_2;
    } delegatetable;
typedef vec3f32 (*callbackhugevecslice)(slicevec3f32 slice);
uint8_t callback(fptr_fn_u8_rval_u8 callback, uint8_t value);
ffierror panics();
vec3f32 pattern_ffi_slice_delegate_huge(callbackhugevecslice callback);
optioninner pattern_ffi_option_1(optioninner ffi_slice);
inner pattern_ffi_option_2(optioninner ffi_slice);
uint8_t pattern_ffi_bool(uint8_t ffi_bool);
char pattern_ffi_cchar(char ffi_cchar);
const char* pattern_ffi_cchar_const_pointer(const char* ffi_cchar);
char* pattern_ffi_cchar_mut_pointer(char* ffi_cchar);
uint64_t pattern_api_guard();
uint32_t pattern_callback_1(mycallback callback, uint32_t x);
mycallbackvoid pattern_callback_2(mycallbackvoid callback);
void pattern_callback_3(delegatecallbackmycallbackcontextual callback, uint32_t x);
uint32_t pattern_callback_4(mycallbacknamespaced callback, uint32_t x);
sumdelegate1 pattern_callback_5();
sumdelegate2 pattern_callback_6();
ffierror pattern_callback_7(sumdelegatereturn c1, sumdelegatereturn2 c2, int32_t x, int32_t i, int32_t* o);
void pattern_surrogates_1(local s, container* c);
/// Destroys the given instance.
///
/// # Safety
///
/// The passed parameter MUST have been created with the corresponding init function;
/// passing any other value results in undefined behavior.
ffierror basic_service_destroy(basicservice** context);
ffierror basic_service_new(basicservice** context);
/// Destroys the given instance.
///
/// # Safety
///
/// The passed parameter MUST have been created with the corresponding init function;
/// passing any other value results in undefined behavior.
ffierror service_on_panic_destroy(serviceonpanic** context);
ffierror service_on_panic_new(serviceonpanic** context);
/// Methods returning a Result<(), _> are the default and do not
/// need annotations.
ffierror service_on_panic_return_result(const serviceonpanic* context, uint32_t anon1);
/// Methods returning a value need an `on_panic` annotation.
uint32_t service_on_panic_return_default_value(const serviceonpanic* context, uint32_t x);
/// This function has no panic safeguards. It will be a bit faster to
/// call, but if it panics your host app will be in an undefined state.
const char* service_on_panic_return_ub_on_panic(serviceonpanic* context);
/// Destroys the given instance.
///
/// # Safety
///
/// The passed parameter MUST have been created with the corresponding init function;
/// passing any other value results in undefined behavior.
ffierror service_callbacks_destroy(servicecallbacks** context);
ffierror service_callbacks_new(servicecallbacks** context);
ffierror service_callbacks_callback_simple(servicecallbacks* context, mycallback callback);
ffierror service_callbacks_callback_ffi_return(servicecallbacks* context, sumdelegatereturn callback);
ffierror service_callbacks_callback_with_slice(servicecallbacks* context, sumdelegatereturn callback, slicei32 input);
void service_callbacks_set_delegate_table(servicecallbacks* context, const delegatetable* table);
ffierror service_callbacks_invoke_delegates(const servicecallbacks* context);
/// Destroys the given instance.
///
/// # Safety
///
/// The passed parameter MUST have been created with the corresponding init function;
/// passing any other value results in undefined behavior.
ffierror service_ignoring_methods_destroy(serviceignoringmethods** context);
ffierror service_ignoring_methods_new(serviceignoringmethods** context);
/// Destroys the given instance.
///
/// # Safety
///
/// The passed parameter MUST have been created with the corresponding init function;
/// passing any other value results in undefined behavior.
ffierror service_multiple_ctors_destroy(servicemultiplectors** context);
ffierror service_multiple_ctors_new_with(servicemultiplectors** context, uint32_t some_value);
ffierror service_multiple_ctors_new_without(servicemultiplectors** context);
ffierror service_multiple_ctors_new_with_string(servicemultiplectors** context, const char* anon0);
ffierror service_multiple_ctors_new_failing(servicemultiplectors** context, uint8_t some_value);
/// Destroys the given instance.
///
/// # Safety
///
/// The passed parameter MUST have been created with the corresponding init function;
/// passing any other value results in undefined behavior.
ffierror service_using_lifetimes_destroy(serviceusinglifetimes** context);
ffierror service_using_lifetimes_new_with(serviceusinglifetimes** context, const uint32_t* some_value);
void service_using_lifetimes_lifetime_1(serviceusinglifetimes* context, slicebool slice);
void service_using_lifetimes_lifetime_2(serviceusinglifetimes* context, slicebool slice);
const char* service_using_lifetimes_return_string_accept_slice(serviceusinglifetimes* anon0, sliceu8 anon1);
/// Destroys the given instance.
///
/// # Safety
///
/// The passed parameter MUST have been created with the corresponding init function;
/// passing any other value results in undefined behavior.
ffierror service_various_slices_destroy(servicevariousslices** context);
ffierror service_various_slices_new(servicevariousslices** context);
uint8_t service_various_slices_mut_self(servicevariousslices* context, sliceu8 slice);
/// Single line.
void service_various_slices_mut_self_void(servicevariousslices* context, slicebool slice);